--- a/package.json
+++ b/package.json
@@ -64,20 +64,24 @@
     "@tinymce/tinymce-react": "^3.0.1",
     "@trendmicro/react-sidenav": "^0.4.5",
     "apexcharts": "^3.27.1",
+    "axios": "^1.4.0",
     "bitcoin-conversion": "^0.1.6",
     "bootstrap": "^4.2.1",
     "browser-sync": "^2.26.14",
     "chalk": "^2.4.1",
     "chart.js": "^2.7.3",
+    "child_process": "^1.0.2",
     "compression": "^1.7.4",
     "connected-react-router": "^5.0.1",
     "cross-env": "5.2.0",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
     "express": "4.16.4",
     "firebase": "^5.2.0",
     "fontfaceobserver": "^2.1.0",
+    "fs": "^0.0.1-security",
     "hashids": "^1.2.2",
     "history": "^4.9.0",
     "hoist-non-react-statics": "^3.1.0",
@@ -91,6 +95,7 @@
     "minimist": "1.2.0",
     "moment": "^2.24.0",
     "normalizr": "^3.3.0",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "react": "^16.6.3",
@@ -125,11 +130,13 @@
     "redux": "4.0.1",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.16.2",
+    "request": "^2.88.2",
     "reselect": "4.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.3.3",
+    "sqlite3": "^5.1.6",
     "styled-components": "^4.1.1",
     "warning": "^4.0.3"
   },
